<resources>
    <string name="app_name">King of Neo Tokyo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="signin_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="signin_failure">Sign-in failed.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Welcome to King of Neo Tokyo</string>

    <string name="edit_message">Edit Message</string>

    <!--button labels-->
    <string name="sign_out_button">Sign Out</string>
    <string name="start_button">Start</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <string name="title_activity_tmbp_game">TmbpGameActivity</string>

    <!--Skeleton labels-->
    <string name="next_turn_">Next turn</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>

    <string name="unexpected_status">Unexpected Status</string>
    <string name="title_activity_tbmp_game">TbmpGameActivity</string>

    <!--From Pass and Play-->

    <!--Button Labels-->
    <string name="roll">Roll</string>
    <string name="resolve">Resolve</string>
    <string name="endTurn">End Turn</string>
    <string name="keep">Keep</string>

    <!--Stat Labels-->
    <string name="players">Players</string>
    <string name="hearts">Hearts</string>
    <string name="victoryPoints">Victory Points</string>
    <string name="energy">Energy</string>
    <string name="inTokyo">In Tokyo?</string>

    <!--Starting Values-->
    <string name="hearts_start">10</string>
    <string name="victoryPoints_start">0</string>
    <string name="energy_start">0</string>
    <string name="inTokyo_start">No</string>

</resources>
