<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible" >

        <!-- sign-in button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content" >
        </com.google.android.gms.common.SignInButton>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/matchup_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".StartActivity" >

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".SkeletonActivity"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

            <Button
                android:id="@+id/startMatchButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onStartMatchClicked"
                android:text="@string/start_match" />

            <Button
                android:id="@+id/checkGamesButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckGamesClicked"
                android:text="@string/check_games" />

            <Button
                android:id="@+id/quickMatchButon"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onQuickMatchClicked"
                android:text="@string/quick_match" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gameLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartActivity">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:id="@+id/roll_button"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:onClick="rollDice"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Die 0"
            android:id="@+id/die0"
            android:layout_above="@+id/roll_button"
            android:layout_toStartOf="@+id/roll_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Die 1"
            android:id="@+id/die1"
            android:layout_above="@+id/roll_button"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Die2"
            android:id="@+id/die2"
            android:layout_above="@+id/roll_button"
            android:layout_toEndOf="@+id/roll_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Die 3"
            android:id="@+id/die3"
            android:layout_below="@+id/roll_button"
            android:layout_toStartOf="@+id/roll_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Die 4"
            android:id="@+id/die4"
            android:layout_below="@+id/roll_button"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Die 5"
            android:id="@+id/die5"
            android:layout_below="@+id/roll_button"
            android:layout_toEndOf="@+id/roll_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolve"
            android:id="@+id/resolve_button"
            android:layout_below="@+id/roll_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:onClick="resolveDice"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endTurn"
            android:id="@+id/endTurn"
            android:layout_below="@+id/resolve_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:onClick="endTurn" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:stretchColumns="*" >

            <!-- First Row, Labels -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Players"
                    android:id="@+id/player_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hearts"
                    android:id="@+id/hearts_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/victoryPoints"
                    android:id="@+id/vps_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/energy"
                    android:id="@+id/energy_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/inTokyo"
                    android:id="@+id/inTokyo_label"/>
            </TableRow>

            <!-- Second Row, Player 0 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Player 0"
                    android:id="@+id/player0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hearts_start"
                    android:id="@+id/heart0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/victoryPoints_start"
                    android:id="@+id/vp0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/energy_start"
                    android:id="@+id/energy0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/inTokyo_start"
                    android:id="@+id/inTokyo0" />
            </TableRow>

            <!-- Third Row, Player 1 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Player 1"
                    android:id="@+id/player1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hearts_start"
                    android:id="@+id/heart1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/victoryPoints_start"
                    android:id="@+id/vp1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/energy_start"
                    android:id="@+id/energy1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/inTokyo_start"
                    android:id="@+id/inTokyo1" />
            </TableRow>

            <!-- Fourth Row, Player 2 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Player 1"
                    android:id="@+id/player2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hearts_start"
                    android:id="@+id/heart2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/victoryPoints_start"
                    android:id="@+id/vp2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/energy_start"
                    android:id="@+id/energy2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/inTokyo_start"
                    android:id="@+id/inTokyo2" />
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:id="@+id/turnCount"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>